# src/agfun/auth/router/user-router.go
@@ -5,9 +5,9 @@ import (
 )
 
 func initUser() {
-	group := rut.Group("/users")
+	group := rut.Group("/users/")
 
-	// swagger:route POST /users/register users createUser
+	// swagger:route POST /users users createUser
 	//
 	// register user account
 	//
@@ -18,9 +18,9 @@ func initUser() {
 	//   default: genericError
 	//   200: User
 	//   422: validationError
-	group.POST("/register", controller.CreateUser)
+	group.POST("/", controller.CreateUser)
 
-	// swagger:route GET /users/login/{user-name} users login
+	// swagger:route GET /users/{user-name} users login
 	//
 	// user login
 	//
@@ -30,38 +30,19 @@ func initUser() {
 	//   default: genericError
 	//   200: User
 	//   422: validationError
-	group.GET("/login/:user-name", controller.Login)
-	// swagger:route POST /users/roles roles addRole
-	//
-	// add role
-	//
-	// add role
-	//
-	// responses:
-	//   200: Role
-	group.POST("/roles", controller.AddRole)
-	// swagger:route POST /users/roles roles delRole
-	//
-	// delete role
-	//
-	// delete role
-	//
-	// responses:
-	//   200: nil
-	group.DELETE("/roles/:id", controller.DelRole)
-	group.PUT("/roles/:id", controller.UpdateRole)
-	group.GET("roles", controller.GetRoles)
+	group.GET("/:user-name", controller.Login)
 
-	// swagger:route POST /users/{id}/roles/{id} roles addUserRole
+	// swagger:route POST /users/{user-id}/roles/{role-id} roles addUserRole
 	//
-	// delete role
+	// add user role
 	//
-	// delete role
+	// add user role
 	//
 	// responses:
-	//   200: nil
-	group.POST("/vips", controller.AddUserRole)
+	//   200: User
+	group.POST("/:user-id/roles/:role-id", controller.AddUserRole)
+
 	group.GET("/vips", controller.GetVips)
-	group.PUT("/vips/:id", controller.UpdateVip)
-	group.DELETE("vips/:id", controller.DelVip)
+	//group.PUT("/vips/:id", controller.UpdateVip)
+	//group.DELETE("vips/:id", controller.DelVip)
 }
